# mlxvm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  smoke.yml
packaging/homebrew/: README.md  mlxvm.rb
src/mlxvm/: __init__.py  __main__.py  errors.py  logging.py  onboarding.py  upgrade.py
src/mlxvm/cli/: __init__.py  main.py
src/mlxvm/config/: __init__.py  paths.py  project.py  settings.py
src/mlxvm/diagnostics/: __init__.py  doctor.py
src/mlxvm/hub/: __init__.py  client.py
src/mlxvm/lifecycle/: __init__.py  manager.py
src/mlxvm/locks/: __init__.py  file.py
src/mlxvm/registry/: __init__.py  db.py
src/mlxvm/resolver/: __init__.py  models.py
src/mlxvm/runtime/: __init__.py  runner.py  worker.py
src/mlxvm/shell/: __init__.py  integration.py
tests/: test_cli.py  test_cli_lifecycle.py  test_hub.py  test_lifecycle.py  test_onboarding.py  test_paths.py  test_registry.py  test_resolver.py  test_runtime.py  test_settings.py  test_shell.py
