[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mlxvm"
version = "0.1.0"
description = "An nvm-style local model manager for MLX"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Tushar Mohan", email = "12576027+Botfather@users.noreply.github.com"}]
keywords = ["mlx", "mlx-lm", "llm", "apple-silicon", "huggingface", "cli", "model-manager"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "huggingface-hub>=0.30,<2",
  "mlx-lm>=0.29,<0.31",
  "packaging>=23",
  "platformdirs>=4.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "pytest-cov>=5", "ruff>=0.11"]

[project.urls]
Homepage = "https://github.com/Botfather/mlxvm"
Repository = "https://github.com/Botfather/mlxvm"
Issues = "https://github.com/Botfather/mlxvm/issues"
Changelog = "https://github.com/Botfather/mlxvm/blob/main/CHANGELOG.md"

[project.scripts]
mlxvm = "mlxvm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
